styles/base.css
/*Bugs I've noticed:
-the header has the image and text under each other, I need to make it side by side
-fix order of CSS file (Some things seem out of order)

ADVANCED/IF EXTRA TIME:
-the colors hurt my eyes. I'm still commited to this coloring but I want to see if I can make the website accessibility feature that allows the website to change color*/

@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Handlee&family=Nanum+Myeongjo&family=Playpen+Sans:wght@300&family=Silkscreen&family=Tektur&display=swap');


header {
    /*place-items: ;  ->figure out how to change the grid layout */
    background-color:FLORALWHITE;
    display:grid;
    place-items: center;

}
/* HEADER IMG AND HEADER H1 HELP FROM PROFESSOR
  margin: 20px;
border-radius: 20px 0; */
header img{ 
    border-radius: 85px;
}
header h1 {
    text-align: center;
}

img { 
    padding: 10px;
    width: 150px;
}

body { 
    
    font-family:'tektur', 'playpen+sans', 'silksreen', 'Nanum+Myeongjo', sans-serif;
    color: black;
    background-color: #8B008B ;

}

nav { 
    background-color: #8B008B;
    color:floralwhite;
    
}

nav a { 
    color: floralwhite;
}

nav a:hover{
    color:#f028f0;

}
main {
    Background-color: floralwhite;

}
/*COPIED FROM PROFESSORS CSS:
 .card {
    background-color: #fffcf2;
    margin: 0 0 16px 0;
    padding: 0 16px;
    border-radius: 10px;
} */
.card {
    background-color: #f028f0;
    margin:  0 0 55px 0;
    padding: 16px;
    border-radius: 16px;

}
footer {
    background-color: #8B008B;
    color:floralwhite; 
}

/*I'm mostly playing around because I didn't want to rewrite the same code over and over*/
footer,h2,header,nav,main,section { 

    display:grid;
    place-items: center; /*What other codes can work with place-items? Changing "Center" to "right" or "left" doesn't do anything*/


}

